[package]
name = "nightlies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.19.0"
thiserror = "1.0.52"
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter", "registry", "fmt"] }
home = "0.5.9"
tabwriter = "1.4.0"
gix = "0.62.0"
anyhow = "1.0.82"
colored = "3.0.0"

